--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 
     <link rel="shortcut icon" href="media/faviconjk.ico" type="image/x-icon">
     <link rel="stylesheet" href="style/style.css">
+    <link rel="stylesheet" href="style/media-queries.css">
     <script src="js/game.js" defer></script>
     <script src="https://kit.fontawesome.com/14f2d4c777.js" crossorigin="anonymous"></script> <!-- Font Awesome -->
 
